--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
-    "sqlite3": "^4.0.4",
     "supertest": "^3.3.0"
   },
   "dependencies": {
@@ -28,6 +27,7 @@
     "pg": "^7.7.1",
     "wiki-infobox": "^0.4.0",
     "wikijs": "^4.10.0",
-    "wtf_wikipedia": "^7.1.1"
+    "wtf_wikipedia": "^7.1.1",
+    "sqlite3": "^4.0.4"
   }
 }
